// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth actions confirmForgotPassword 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "CONFIRM_FORGOT_PASSWORD",
  },
]
`;

exports[`auth actions loginUser 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "LOGIN_USER",
  },
]
`;

exports[`auth actions logoutUser 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "LOGOUT_USER",
  },
]
`;

exports[`auth actions verifyForgotPassword 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "VERIFY_FORGOT_PASSWORD",
  },
]
`;
